# novel-reader

./: PRD.md  技术选型报告.md  架构设计文档.md
app/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
app/sidecar/: requirements.txt
app/sidecar/src/engines/: parse_engine.py
app/sidecar/tests/: test_llm_engine.py  test_parse_engine.py  test_rank_engine.py  test_server.py
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/resources/sidecar/: requirements.txt
app/src-tauri/resources/sidecar/src/: server.py
app/src-tauri/resources/sidecar/src/engines/: embed_engine.py  llm_engine.py  parse_engine.py  rank_engine.py
app/src-tauri/src/: config_manager.rs  main.rs
app/src-tauri/src/commands/: mod.rs
app/src-tauri/src/db/: mod.rs
app/src-tauri/src/models/: mod.rs
app/src-tauri/src/services/: graph_service.rs  mod.rs  novel_service.rs  rag_service.rs  sidecar_manager.rs
app/src/components/: ChatPanel.tsx  EntityDetailPanel.tsx  GraphView.tsx  NovelList.tsx  SettingsPanel.tsx
app/src/hooks/: useTauriEvent.ts
app/src/store/: novelStore.ts
app/src/types/: index.ts
